<resources>
    <string name="placeholder">Placeholder</string>
    <string name="app_name">Mobilne projekt</string>
    <string-array name="seats">
        <item>2</item>
        <item>4</item>
        <item>5</item>
        <item>7</item>
        <item>9</item>
        <item>22</item>
        <item>40</item>
    </string-array>
    <string name="noDesc">Brak opisu</string>
    <string name="name">Nazwa</string>
    <string name="year">Rocznik</string>
    <string name="dmc">Dmc</string>
    <string name="seats">Siedzenia</string>
    <string name="mileage">Przebieg</string>
    <string name="price">Cena</string>
    <string name="sec">Kaucja</string>
    <string name="addCar">Dodaj auto</string>
    <string name="noCars">Nie masz żadnych wypożyczonych pojazdów</string>
    <string name="priceFormat">%1$.2fzł</string>
    <string name="priceFormatString">%1$szł</string>
    <string name="ret">Zwróć</string>
    <string name="carImage">Obraz pojazdu</string>
    <string name="title_activity_list_of_cars">Mobilne projekt</string>
    <string name="navigation_drawer_open">Otwórz nawigacje</string>
    <string name="navigation_drawer_close">Zamknij nawigacje</string>
    <string name="nav_header_title">Mobilne projekt zespołowy</string>

    <string name="menu_rented">Wynajęty pojazdy</string>
    <string name="menu_add">Dodaj pojazd</string>
    <string name="menu_history">Historia</string>
    <string name="menu_my">Moje pojazdy</string>
    <string name="menu_logout">Wyloguj</string>
    <string name="appInfo">Mobilne projekt to projekt napisany na zajęcia \"Aplikacje mobilne\" w semestrze letnim 2018/2019.\n
        Autorzy:\n
        Jarosław Pokropiński\n
        Rafał Marcin Młodzieniak\n
        Veranika Krymchak\n
        Mykola Medynskyi\n
        Andrzej Antolak
    </string>
    <string name="appInformation">Informacje o aplikacji</string>
    <string name="rented">Wynajęty</string>
</resources>
