<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_rented"
            android:title="@string/menu_rented" />
        <item
            android:id="@+id/nav_add"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/menu_add" />
        <item
            android:id="@+id/nav_history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_my"
            android:title="@string/menu_my" />
        <item android:title="@string/appInformation" android:id="@+id/nav_info"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="@string/menu_logout" />
    </group>

</menu>
